# Chess_C_plusplus

./: CMakeLists.txt  README.md  board.cpp  board.h  gamemanager.cpp  gamemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mymath.cpp  mymath.h  piece.cpp  piece.h  start_page.cpp  start_page.h  start_page.ui
